--- a/package.json
+++ b/package.json
@@ -12,12 +12,17 @@
     "@types/react-dom": "^18.0.6",
     "axios": "^0.27.2",
     "buffer": "^6.0.3",
+    "class-names": "^1.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-loading": "^2.0.3",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
+    "react-spinner-animated": "^3.1.1",
     "recoil": "^0.7.5",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.1.3",
     "typescript": "^4.8.3",
     "web-vitals": "^2.1.4"
   },
