--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
     "react-spinner-animated": "^3.1.1",
+    "react-toastify": "^9.0.8",
     "recoil": "^0.7.5",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.1.3",
